<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorForth"
    android:scrollbarSize="0dp"
    tools:context=".activity.SignupActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/welcome"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2_dp"
                android:layout_marginTop="@dimen/margin_24_dp"
                android:layout_marginEnd="@dimen/margin_2_dp"
                app:cardBackgroundColor="@color/colorFifth"
                app:cardCornerRadius="@dimen/margin_24_dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/etPhoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:nextFocusDown="@id/etPinNumber"
                    android:padding="16dp"
                    tools:ignore="Autofill" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2_dp"
                android:layout_marginTop="@dimen/margin_24_dp"
                android:layout_marginEnd="@dimen/margin_2_dp"
                app:cardBackgroundColor="@color/colorFifth"
                app:cardCornerRadius="@dimen/margin_24_dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/etPinNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/pin_number"
                    android:inputType="numberPassword"
                    android:nextFocusDown="@id/etName"
                    android:padding="16dp"
                    tools:ignore="Autofill" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2_dp"
                android:layout_marginTop="@dimen/margin_24_dp"
                android:layout_marginEnd="@dimen/margin_2_dp"
                app:cardBackgroundColor="@color/colorFifth"
                app:cardCornerRadius="@dimen/margin_24_dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/full_name"
                    android:inputType="textCapSentences"
                    android:nextFocusDown="@id/etShopCompanyName"
                    android:padding="16dp"
                    tools:ignore="Autofill" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2_dp"
                android:layout_marginTop="@dimen/margin_24_dp"
                android:layout_marginEnd="@dimen/margin_2_dp"
                app:cardBackgroundColor="@color/colorFifth"
                app:cardCornerRadius="@dimen/margin_24_dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/etShopCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/shop_name"
                    android:inputType="textCapSentences"
                    android:nextFocusDown="@id/etAddress"
                    android:padding="16dp"
                    tools:ignore="Autofill" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2_dp"
                android:layout_marginTop="@dimen/margin_24_dp"
                android:layout_marginEnd="@dimen/margin_2_dp"
                app:cardBackgroundColor="@color/colorFifth"
                app:cardCornerRadius="@dimen/margin_24_dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/address"
                    android:inputType="textCapSentences"
                    android:padding="16dp"
                    tools:ignore="Autofill" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="@dimen/margin_2_dp"
                android:layout_marginTop="@dimen/margin_24_dp"
                android:layout_marginEnd="@dimen/margin_2_dp"
                app:cardBackgroundColor="@color/colorFifth"
                app:cardCornerRadius="@dimen/margin_24_dp"
                app:cardElevation="2dp">

                <Spinner
                    android:id="@+id/spinnerLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:padding="16dp"
                    tools:ignore="Autofill" />

            </android.support.v7.widget.CardView>


            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2_dp"
                android:layout_marginTop="@dimen/margin_24_dp"
                android:layout_marginEnd="@dimen/margin_2_dp"
                android:background="@drawable/login_button_bg_shape"
                android:padding="@dimen/margin_8_dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvSellerLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24_dp"
                android:layout_marginBottom="@dimen/margin_16_dp"
                android:text="@string/account_Login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

    </LinearLayout>
</ScrollView>