<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e6e6e6"
    android:layout_marginBottom="1dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSetFactoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_4_dp"
        android:text="@string/fabric_name"
        android:textColor="@color/colorFirst"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSetFactoryType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_4_dp"
            android:text="@string/fabric_type"
            android:textColor="@color/colorFirst"
            android:textSize="@dimen/testSize_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSetProduction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_4_dp"
            android:text="@string/production_capability"
            android:textColor="@color/colorFirst"
            android:textSize="@dimen/testSize_16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="230dp">

        <ImageView
            android:id="@+id/ivSetFactoryImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/noimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSetFactoryLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_4_dp"
            android:text="@string/factory_location"
            android:textColor="@color/colorWhiteGlass"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/ivCall"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/margin_8_dp"
        android:layout_marginBottom="@dimen/margin_8_dp"
        android:tint="@color/dialUp"
        android:src="@drawable/ic_dial" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorThird" />
</LinearLayout>