<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorForth"
        android:fitsSystemWindows="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linelayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorThird"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8_dp"
                        android:layout_weight="0.7"
                        android:padding="@dimen/margin_4_dp"
                        android:text="@string/full_name"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:padding="@dimen/margin_4_dp"
                        android:text=":"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvNavUserName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/full_name"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_16_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8_dp"
                        android:layout_marginTop="@dimen/margin_4_dp"
                        android:layout_weight="0.7"
                        android:padding="@dimen/margin_4_dp"
                        android:text="@string/phone_number"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4_dp"
                        android:layout_weight="0.1"
                        android:padding="@dimen/margin_4_dp"
                        android:text=":"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvNavPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4_dp"
                        android:layout_weight="1"
                        android:text="@string/phone_number"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_8_dp"
                android:paddingEnd="@dimen/margin_8_dp"
                app:layout_constraintTop_toBottomOf="@+id/linelayout1">

                <TextView
                    android:id="@+id/tvBuyingPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:background="@drawable/menu_item_border"
                    android:padding="@dimen/margin_8_dp"
                    android:paddingStart="@dimen/margin_24_dp"
                    android:paddingEnd="0dp"
                    android:text="@string/buying_post"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSellingPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8_dp"
                    android:background="@drawable/menu_item_border"
                    android:padding="@dimen/margin_8_dp"
                    android:paddingStart="@dimen/margin_24_dp"
                    android:paddingEnd="0dp"
                    android:text="@string/selling_post"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvStockLotPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8_dp"
                    android:background="@drawable/menu_item_border"
                    android:padding="@dimen/margin_8_dp"
                    android:paddingStart="@dimen/margin_24_dp"
                    android:paddingEnd="0dp"
                    android:text="@string/selling_stock_lot"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFactoryPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8_dp"
                    android:background="@drawable/menu_item_border"
                    android:padding="@dimen/margin_8_dp"
                    android:paddingStart="@dimen/margin_24_dp"
                    android:paddingEnd="0dp"
                    android:text="@string/factory_profile"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvQuotePost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8_dp"
                    android:background="@drawable/menu_item_border"
                    android:padding="@dimen/margin_8_dp"
                    android:paddingStart="@dimen/margin_24_dp"
                    android:paddingEnd="0dp"
                    android:text="@string/ask_quote"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tvNotificationSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8_dp"
                    android:background="@drawable/menu_item_border"
                    android:padding="@dimen/margin_8_dp"
                    android:paddingStart="@dimen/margin_24_dp"
                    android:paddingEnd="0dp"
                    android:text="@string/notification"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLogOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8_dp"
                    android:background="@drawable/menu_item_border"
                    android:padding="@dimen/margin_8_dp"
                    android:paddingStart="@dimen/margin_24_dp"
                    android:paddingEnd="0dp"
                    android:text="@string/log_out"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tvHelpLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8_dp"
                    android:background="@drawable/menu_item_border"
                    android:drawableStart="@drawable/ic_call_24"
                    android:padding="@dimen/margin_8_dp"
                    android:paddingStart="@dimen/margin_16_dp"
                    android:paddingEnd="0dp"
                    android:text="  Help Line"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>